--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git BASH</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Lobster&family=Moo+Lah+Lah&family=Permanent+Marker&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        
+        <p class="insane">hello</p>
+        <ul>
+            <li>ABOUT</li>
+            <li>PORTFOLIO</li>
+            <li>PART TIME</li>
+            <li>PALITICS SYSTEM</li>
+        </ul>
     </header>
 </body>
 </html>
