--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>ABOUT</li>
             <li>PORTFOLIO</li>
             <li>PART TIME</li>
-            <li>PALITICS SYSTEM</li>
+            <li>PALITICS SYSTEM<li>
         </ul>
     </header>
 </body>
