--- a/index.html
+++ b/index.html
@@ -18,5 +18,24 @@
             <li>PALITICS SYSTEM<li>
         </ul>
     </header>
+    <main>
+        <div class="text-container">
+            <div class="text-1">
+                <div class="text-inset">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo cumque quidem maiores dolor pariatur impedit iusto rerum repudiandae eius blanditiis quis, nihil iste similique culpa voluptatum nulla voluptas quisquam officia.
+                   <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, sed facere omnis aut deleniti unde magni expedita quasi? Iure eius iste rem tenetur quibusdam doloremque incidunt excepturi. Voluptas, ad corrupti.
+                   <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo cumque quidem maiores dolor pariatur impedit iusto rerum repudiandae eius blanditiis quis, nihil iste similique culpa voluptatum nulla voluptas quisquam officia.
+                </div>
+            </div>
+            <div class="text-2">
+                <div class="text-inset">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo cumque quidem maiores dolor pariatur impedit iusto rerum repudiandae eius blanditiis quis, nihil iste similique culpa voluptatum nulla voluptas quisquam officia.
+                   <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, sed facere omnis aut deleniti unde magni expedita quasi? Iure eius iste rem tenetur quibusdam doloremque incidunt excepturi. Voluptas, ad corrupti.
+                   <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo cumque quidem maiores dolor pariatur impedit iusto rerum repudiandae eius blanditiis quis, nihil iste similique culpa voluptatum nulla voluptas quisquam officia.
+                </div>
+            </div>
+        </div>
+        
+    </main>
 </body>
 </html>
